--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@ permalink: /
         <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"> 
         <link rel="stylesheet" href="{{ "css/front.css" | prepend: site.baseurl }}">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+				<!-- temporary redirect -->
+			<script type="text/javascript">
+				var host = "farischebib.is";
+				if ((host == window.location.host) && (window.location.protocol != "https:"))
+					window.location.protocol = "https";
+			</script>	
     </head>
+
     <body>
         <div class="content">
             {% if site.front_img %}
