--- a/index.html
+++ b/index.html
@@ -112,9 +112,6 @@ permalink: /
                     <li><a class="fa fa-2x fa-weibo" href="https://weibo.com/{{ site.weibo_username }}"><span class="description">微博</span></a></li>
                     {% endif %}
 
-                    {% if site.blog_url %}
-                    <li><a class="fa fa-2x fa-tags" href="{{ site.baseurl }}{{ site.blog_url }}"><span class="description">Blog</span></a></li>
-                    {% endif %}
 
                     {% if site.email %}
                     <li><a class="fa fa-2x fa-envelope" href="mailto:{{ site.email }}"><span class="description">Email</span></a></li>
@@ -122,6 +119,17 @@ permalink: /
 
                     {% if site.public_key_url %}
                     <li><a class="fa fa-2x fa-key" href="{{ site.public_key_url }}"><span class="description">PGP Key</span></a></li>
+                    {% endif %}
+
+										{% if site.hacking_blog_url %}
+                    <li class="blog-link"><a class="fa fa-2x fa-terminal" 
+											href="{{ site.hacking_blog_url }}"
+											title="hacking blog"><span
+											class="description">hacking</span></a></li>
+										{% endif %}
+
+                    {% if site.blog_url %}
+                    <li><a class="fa fa-2x fa-laptop" href="{{ site.baseurl }}{{ site.blog_url }}"><span class="description">Blog</span></a></li>
                     {% endif %}
                 </ul>
         </div>
