--- a/index.html
+++ b/index.html
@@ -4,40 +4,17 @@ permalink: /
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="{{ site.description }}">
-        <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"> 
-        <link rel="stylesheet" href="{{ "css/front.css" | prepend: site.baseurl }}">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-				<!-- temporary redirect -->
-			<script type="text/javascript">
-				var host = "farischebib.is";
-				if ((host == window.location.host) && (window.location.protocol != "https:"))
-					window.location.protocol = "https";
-			</script>	
-			<script>
-				(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-				})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-				ga('create', 'UA-40720897-2', 'auto');
-				ga('send', 'pageview');
-
-			</script>
+      {% include head.html %}
     </head>
 
     <body>
         <div class="content">
             {% if site.front_img %}
-            <img src="{{ site.front_img_path }}" id="fullscreen">
+              <img src="{{ site.front_img_path }}" id="fullscreen">
             {% endif %}
 
             {% if site.avatar %}
-                <img src="{{ site.avatar_img_path }}" id="avatar">
+              <img src="{{ site.avatar_img_path }}" id="avatar">
             {% endif %}
 
             <h1>{{ site.name }}</h1>
@@ -121,12 +98,12 @@ permalink: /
                     <li><a class="fa fa-2x fa-key" href="{{ site.public_key_url }}"><span class="description">PGP Key</span></a></li>
                     {% endif %}
 
-										{% if site.hacking_blog_url %}
-                    <li class="blog-link"><a class="fa fa-2x fa-terminal" 
-											href="{{ site.hacking_blog_url }}"
-											title="hacking blog"><span
-											class="description">hacking</span></a></li>
-										{% endif %}
+                    {% if site.hacking_blog_url %}
+                    <li class="blog-link"><a class="fa fa-2x fa-terminal"
+                      href="{{ site.hacking_blog_url }}"
+                      title="hacking blog"><span
+                      class="description">Hacking Blog</span></a></li>
+                    {% endif %}
 
                     {% if site.blog_url %}
                     <li><a class="fa fa-2x fa-laptop" href="{{ site.baseurl }}{{ site.blog_url }}"><span class="description">Blog</span></a></li>
@@ -136,4 +113,3 @@ permalink: /
 
     </body>
 </html>
-
