--- a/hacking/index.html
+++ b/hacking/index.html
@@ -3,7 +3,7 @@ layout: default
 category_name: hacking
 category_index: hacking
 category_description: "exploration by pushing the boundaries"
-category_image: "/imgs/background.jpg"
+category_image: "/imgs/category/hacking.jpg"
 ---
 
 {% include category.html %}
