--- a/flying/index.html
+++ b/flying/index.html
@@ -1,5 +1,8 @@
 ---
 layout: default
+category_name: flying
+category_index: flying
+category_description: "a freedom unlike any other"
 category_image: "/imgs/category/flying.jpg"
 ---
 
