--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@ permalink: /
 
                 <ul>
                     {% if site.github_username %}
-                    <li><a class="fa fa-2x fa-github" href="https://github.com/{{ site.github_username }}"><span class="description">GitHub</span></a></li>
+                    <li><a class="fa fa-2x fa-github" target="_blank" href="https://github.com/{{ site.github_username }}"><span class="description">GitHub</span></a></li>
                     {% endif %}
 
                     {% if site.codepen_username %}
-                    <li><a class="fa fa-2x fa-codepen" href="https://codepen.io/{{ site.codepen_username }}"><span class="description">CodePen</span></a></li>
+                    <li><a class="fa fa-2x fa-codepen" target="_blank" href="https://codepen.io/{{ site.codepen_username }}"><span class="description">CodePen</span></a></li>
                     {% endif %}
 
                     {% if site.facebook_username %}
-                    <li><a class="fa fa-2x fa-facebook" href="https://facebook.com/{{ site.facebook_username }}"><span class="description">Facebook</span></a></li>
+                    <li><a class="fa fa-2x fa-facebook" target="_blank" href="https://facebook.com/{{ site.facebook_username }}"><span class="description">Facebook</span></a></li>
                     {% endif %}
 
                     {% if site.vk_username %}
@@ -47,31 +47,27 @@ permalink: /
                     {% endif %}
 
                     {% if site.linked_in_username %}
-                    <li><a class="fa fa-2x fa-linkedin" href="https://linkedin.com/in/{{ site.linkedin_username }}"><span class="description">LinkedIn</span></a></li>
+                    <li><a class="fa fa-2x fa-linkedin" target="_blank" href="https://linkedin.com/in/{{ site.linkedin_username }}"><span class="description">LinkedIn</span></a></li>
                     {% endif %}
 
                     {% if site.instagram_username %}
-                    <li><a class="fa fa-2x fa-instagram" href="https://instagram.com/{{ site.instagram_username }}"><span class="description">Instagram</span></a></li>
+                    <li><a class="fa fa-2x fa-instagram" target="_blank" href="https://instagram.com/{{ site.instagram_username }}"><span class="description">Instagram</span></a></li>
                     {% endif %}
 
                     {% if site.flickr_usernmae %}
-                    <li><a class="fa fa-2x fa-flickr" href="https://flickr.com/photos/{{ site.flickr_username }}"><span class="description">Flickr</span></a></li>
+                    <li><a class="fa fa-2x fa-flickr" target="_blank" href="https://flickr.com/photos/{{ site.flickr_username }}"><span class="description">Flickr</span></a></li>
                     {% endif %}
 
                     {% if site.stack_of_username %}
-                    <li><a class="fa fa-2x fa-stack-overflow" href="https://stackoverflow.com/users/{{ site.stack_of_username }}"><span class="description">Stack OF</span></a></li>
-                    {% endif %}
-
-                    {% if site.reddit_username %}
-                    <li><a class="fa fa-2x fa-reddit" href="https://reddit.com/user/{{ site.reddit_username }}"><span class="description">Reddit</span></a></li>
+                    <li><a class="fa fa-2x fa-stack-overflow" target="_blank"  href="https://stackoverflow.com/users/{{ site.stack_of_username }}"><span class="description">Stack OF</span></a></li>
                     {% endif %}
 
                     {% if site.medium_username %}
-                    <li><a class="fa fa-2x fa-medium" href="https://medium.com/@{{ site.medium_username }}"><span class="description">Medium</span></a></li>
+                    <li><a class="fa fa-2x fa-medium" target="_blank" href="https://medium.com/@{{ site.medium_username }}"><span class="description">Medium</span></a></li>
                     {% endif %}
 
                     {% if site.tumblr_username %}
-                    <li><a class="fa fa-2x fa-tumblr" href="https://{{ site.tumblr_username }}.tumblr.com/"><span class="description">Tumblr</span></a></li>
+                    <li><a class="fa fa-2x fa-tumblr" target="_blank" href="https://{{ site.tumblr_username }}.tumblr.com/"><span class="description">Tumblr</span></a></li>
                     {% endif %}
 
                     {% if site.weibo_username %}
@@ -83,7 +79,7 @@ permalink: /
                     {% endif %}
 
                     {% if site.public_key_url %}
-                    <li><a class="fa fa-2x fa-key" href="{{ site.public_key_url }}"><span class="description">PGP Key</span></a></li>
+                    <li><a class="fa fa-2x fa-key" target="_blank" href="{{ site.public_key_url }}"><span class="description">PGP Key</span></a></li>
                     {% endif %}
                   </ul>
         </div>
